# Jetson_Monitor

./: .gitlab-ci.yml  CMakeLists.txt
source/: main.cpp
